syntax = "proto3";
option swift_prefix="SP";

import "google/protobuf/duration.proto";
import "Credentials.proto";
import "ClientInfo.proto";

//Requests
message LoginV3Request {
    ShortClientInfo client = 1;
    optional bytes context = 2;
    optional LoginChallengeAnswerData answer_data = 3;
    oneof request {
        StoredCredential stored = 100;
        Password password = 101;
        FacebookAccessToken facebook = 102;
        PhoneNumber phone = 103;
        OneTimeToken one_time_token = 104;
        ParentChildCredential parent_child_cred = 105;
        AppleSignInCredential apple_sign_in = 106;
    }
}

message PhoneNumber {
    string number = 1;
    string iso_country_code = 2;
    string country_calling_code = 3;
}

message LoginChallengeAnswerData {
    repeated LoginChallengeAnswer answers = 1;
}

message LoginChallengeAnswer {
    oneof answer {
        HashcashAnswer hashcash = 1;
        LoginCodeAnswer code = 2;
    }
}

message HashcashAnswer {
    bytes suffix = 1;
    .google.protobuf.Duration duration = 2;
}

message LoginCodeAnswer {
    string val = 1;
}

//Responses
message LoginV3Response {
    enum Warning {
        UNKNOWN_WARNING = 0;
        DEPRECATED_PROTOCOL_VERSION = 1;
    }
    enum Error {
        UNKNOWN_ERROR = 0;
        INVALID_CREDENTIALS = 1;
        BAD_REQUEST = 2;
        UNSUPPORTED_LOGIN_PROTOCOL = 3;
        TIMEOUT = 4;
        UNKNOWN_IDENTIFIER = 5;
        TOO_MANY_ATTEMPTS = 6;
        INVALID_PHONENUMBER = 7;
        TRY_AGAIN_LATER = 8;
    }
    oneof response {
        AuthToken auth = 1;
        LoginV3Response.Error error = 2;
        LoginChallengesData challenge = 3;
    }
    repeated LoginV3Response.Warning warnings = 4;
    optional bytes context = 5;
    optional string id_token = 6;
    optional UserInfo user_info = 7;
}

message AuthToken {
    string username = 1;
    string token = 2;
    bytes stored_credential = 3;
    int32 expires_in_s = 4;
}

message UserInfo {
    enum Gender {
        UNKNOWN = 0;
        MALE = 1;
        FEMALE = 2;
        NEUTRAL = 3;
    }
    string name = 1;
    string email = 2;
    bool email_verified = 3;
    string birthdate = 4;
    UserInfo.Gender gender = 5;
    string phone = 6;
    bool phone_verified = 7;
    bool email_alredy_registered = 8;
}

message LoginChallengesData {
    repeated LoginChallenge challenges = 1;
}

message LoginChallenge {
    oneof method {
        LoginHashcashChallenge hashcash = 1;
        LoginCodeChallenge code = 2;
    }
}

message LoginHashcashChallenge {
    bytes prefix = 1;
    int32 length = 2;
}

message LoginCodeChallenge {
    enum Method {
        UNKNOWN = 0;
        SMS = 1;
    }
    LoginCodeChallenge.Method method = 1;
    int32 length = 2;
    int32 expires_in_s = 3;
    string phone = 4;
}
